--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
+    "lucide-react": "^0.525.0",
     "modern-normalize": "^2.0.0",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
