--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.30.1",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "yup": "^1.6.1"
